--- a/src/WorkOrderManager/WorkOrderManager.csproj
+++ b/src/WorkOrderManager/WorkOrderManager.csproj
@@ -7,14 +7,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.0.0" />
 		<PackageReference Include="FastEndpoints" Version="5.11.0" />
-		<PackageReference Include="FastEndpoints.Swagger" Version="5.7.0" />
-		<!--<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />-->
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
